--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/NewsGalleryCategoryList.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/NewsGalleryCategoryList.cshtml
@@ -79,7 +79,7 @@
 
                         if (ad.Layer == 3 && i == 1)
                         {
-                        <div class="GG_Box">
+                        <div class="GG_Box  GG_Box1 GG_Box2">
                             @if (ad.ThumbList.Count < 1 || ad.ThumbStyle == 0)
                             {
                                 //无图
@@ -167,7 +167,7 @@
                         else if (ad.Layer == 4 && i == 2)
                         {
 
-                        <div class="GG_Box">
+                        <div class="GG_Box GG_Box1 GG_Box2">
                             @if (ad.ThumbList.Count < 1 || ad.ThumbStyle == 0)
                             {
                                 //无图
@@ -254,7 +254,7 @@
                         }
                         else if (ad.Layer == 5 && i == 3)
                         {
-                        <div class="GG_Box">
+                        <div class="GG_Box GG_Box1 GG_Box2">
                             @if (ad.ThumbList.Count < 1 || ad.ThumbStyle == 0)
                             {
                                 //无图
@@ -340,7 +340,7 @@
                         else if (ad.Layer == 6 && i == 4)
                         {
 
-                        <div class="GG_Box">
+                        <div class="GG_Box GG_Box1 GG_Box2">
                             @if (ad.ThumbList.Count < 1 || ad.ThumbStyle == 0)
                             {
                                 //无图
