--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Open.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Open.cshtml
@@ -243,6 +243,8 @@
                                 <a href="/Record/OpenRecord/?lType=@record.lType" class="UL2_baif3a">历史</a>
                                 <a href="/Plan/Post/@record.lType" class="UL2_baif3a">发帖</a>
                                 <a href="/Plan/Index/@record.lType?cur=2" class="UL2_baif3a">排行</a>
+                                <a href="/News/Index/@Tool.GetLotterylType(record.lType)" class="UL2_baif3a">咨讯</a>
+
                                 <div style="clear:both;"></div>
                             </div>
                         </div>
