图库广告位

--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/Gallery.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/Gallery.cshtml
@@ -90,7 +90,7 @@
             var html='';
             if(item.ThumbStyle==0)
             {
-                html='<div class="GG_Box ">'
+                html='<div class="GG_Box GG_Box1">'
 	  +'<a href="'+item.TransferUrl+'">'
     	+'<h3 class="GG_B1Tit">'+item.Title+'</h3>'
        + '<div class="GG_BbtFont">'
@@ -109,7 +109,7 @@
                 }
 
 
-                html='<div class="GG_Box">'
+                html='<div class="GG_Box GG_Box1">'
 	+'<a href="'+item.TransferUrl+'">'
     	+'<div class="GG_B2Left f-l">'
         	+'<h3 class="GG_B1Tit">'+item.Title+'</h3>'
@@ -129,7 +129,7 @@
                 {
                     img='<img src="'+item.ThumbList[0]+'">'
                 }
-                html='<div class="GG_Box">'
+                html='<div class="GG_Box GG_Box1">'
 	+'<a href="'+item.TransferUrl+'">'
     	+'<h3 class="GG_B1Tit">'+item.Title+'</h3>'
        + '<div class="GG_B4Tu">'+img+'</div>'
@@ -151,7 +151,7 @@
                     }
                 }
 
-                html='<div class="GG_Box">'
+                html='<div class="GG_Box GG_Box1">'
 	+ '<a href="'+item.TransferUrl+'">'
     	+ '<h3 class="GG_B1Tit">'+item.Title+'</h3>'
         + '<ul class="GG_B3Tu">'
@@ -172,7 +172,7 @@
                 {
                     img='<img src="'+item.ThumbList[0]+'"  class="GG_B5Tu">'
                 }
-                html='  <div class="GG_Box">'
+                html='  <div class="GG_Box GG_Box1">'
                + ' <a href="javascript:;">'+img+'</a>'
                + '   </div>'
             }
