修改六合彩名称为6彩，修复快乐十分中玩法名称问题

--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Plan.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Plan.cshtml
@@ -41,7 +41,7 @@
                     <li><a href="javascript:;">@lotteryType.Name</a></li>
                 }
 
-                <div style="clear:bothl;"></div>
+                <div style="clear:both;"></div>
             </ul>
         </div>
         <div class="hdNav_cai_expand" style="display:none">
