--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Plan.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Plan.cshtml
@@ -11,7 +11,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes">
-    <title>c8_计划</title>
+    <title>彩票计划_彩票开奖计划_彩票预测最准确</title>
     <link rel="stylesheet" type="text/css" href="/css/style.css" />
     <script type="text/javascript" src="/js/jquery.js"></script>
     <script type="text/javascript" src="/js/yjp.js"></script>
@@ -27,7 +27,8 @@
 
     <header class="hjc_header">
         <a href="/Home/Index" class="hjc_back"></a>
-        <a href="javascript:;" class="hjc_logo">计划</a>
+        <a href="javascript:;" class="hjc_logo">彩票计划</a>
+        <a href="/Home/Index" class="hjc_home_right"></a>
     </header>
 
     <div class="hjc_hdNav">
