修改六合彩文字

--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/Index.cshtml
@@ -73,7 +73,7 @@
                 <ul class="hdNav_cai">
                     @foreach (LotteryType entity in ViewBag.LotteryTypeList)
                     {
-                        if (entity.TypeName == "六合彩")
+                        if (entity.TypeName == "6彩")
                         {
                             if (entity.Id == currentLotteryTypeId)
                             {
