--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Rule.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Rule.cshtml
@@ -614,7 +614,7 @@
     else if (lType == 5)
     {
         <div class="Rule_box" style="@show">
-            <h3 class="Rule_title">万彩六合彩玩法规则说明:</h3>
+            <h3 class="Rule_title">万彩6彩玩法规则说明:</h3>
             <p class="Rule_font1">（一）特码单双</p>
             <p class="Rule_font2">特码单双：特码为偶数叫特双，为奇数叫特单，49为和</p>
             <p class="Rule_font1">（二）特码大小</p>
@@ -645,10 +645,10 @@
             <p class="Rule_font1">（十三）平5码</p>
             <p class="Rule_font2">从49个号码球中选择5个号码，如有一个或多个号码与开奖号码平码一致则视为中奖。</p>
             <br>
-            <h3 class="Rule_title">六合彩玩法积分规则:</h3>
+            <h3 class="Rule_title">6彩玩法积分规则:</h3>
             <table width="100%" border="1" bordercolor="#999" class="Rule_tableA">
                 <tr>
-                    <th width="25%" align="center" valign="middle" scope="col">六合彩</th>
+                    <th width="25%" align="center" valign="middle" scope="col">6彩</th>
                     <th width="25%" align="center" valign="middle" scope="col">中</th>
                     <th width="25%" align="center" valign="middle" scope="col">不中</th>
                     <th width="25%" align="center" valign="middle" scope="col">备注</th>
