页面调整、bug修复

--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Open.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Open.cshtml
@@ -28,6 +28,7 @@
     <header class="hjc_header">
         <a href="/Home/Index" class="hjc_back"></a>
         <a href="javascript:;" class="hjc_logo">彩票开奖查询</a>
+        <a href="/Home/Index" class="hjc_home_right"></a>
     </header>
     <div class="hjc_hdNav">
 
