--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/Expert.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/Expert.cshtml
@@ -14,7 +14,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes">
-    <title>高手榜</title>
+    <title>彩票高手榜_彩票大师_彩票预测_彩票计划</title>
 
     <link rel="stylesheet" type="text/css" href="/css/mescroll.min.css" />
     <link rel="stylesheet" type="text/css" href="/css/style.css" />
@@ -26,7 +26,8 @@
 
     <header class="hjc_header">
         <a href="/Home/Index" class="hjc_back"></a>
-        <a href="javascript:;" class="hjc_logo">高手榜</a>
+        <a href="javascript:;" class="hjc_logo">彩票高手榜</a>
+        <a href="/Home/Index" class="hjc_home_right"></a>
     </header>
 
     <div class="hjc_hdNav">
