--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Talking/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Talking/Index.cshtml
@@ -8,7 +8,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes">
-    <title>聊天室</title>
+    <title>聊天室_彩票交流_彩票聊天室</title>
     <link rel="stylesheet" type="text/css" href="/css/style.css" />
     <link rel="stylesheet" type="text/css" href="/css/c8-icon.css" />
     <script type="text/javascript" src="/js/jquery.js"></script>
@@ -19,6 +19,7 @@
     <header class="hjc_header">
         <a href="/home/Index" class="hjc_back"></a>
         <a href="javascript:;" class="hjc_logo">聊天室列表</a>
+        <a href="/Home/Index" class="hjc_home_right"></a>
     </header>
     <div class="hjc_chatroom">
         <ul class="chatroom_ul">
