页面样式调整

--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Open.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Open.cshtml
@@ -28,7 +28,7 @@
     <header class="hjc_header">
         <a href="/Home/Index" class="hjc_back"></a>
         <a href="javascript:;" class="hjc_logo">彩票开奖查询</a>
-        <a href="/Home/Index" class="hjc_home_right"></a>
+        <a href="javascript::" class="ZX_Sidebar"></a>
     </header>
     <div class="hjc_hdNav">
 
@@ -267,6 +267,77 @@
             });
 
         </script>
+    </div>
+
+
+    <!--侧边栏-->
+    <div class="ZX_CLBox">
+        <div class="CLB_YY"></div>
+        <div class="CLB_con">
+            <ul class="CLB_cNav">
+                <!--cNav_current-->
+                <li>
+                    <a href="/Home/Index">
+                        <dl class="cNav_Dl">
+                            <dt><img src="~/images/w6_1.png"></dt>
+                            <dd>
+                                <p>首页</p>
+                                <img src="~/images/w7.png">
+                                <div style="clear:both;"></div>
+                            </dd>
+                        </dl>
+                    </a>
+                </li>
+                <li>
+                    <a href="/Home/Open">
+                        <dl class="cNav_Dl">
+                            <dt><img src="~/images/w6_2.png"></dt>
+                            <dd>
+                                <p>开奖</p>
+                                <img src="~/images/w7.png">
+                                <div style="clear:both;"></div>
+                            </dd>
+                        </dl>
+                    </a>
+                </li>
+                <li>
+                    <a href="JavaScript:;">
+                        <dl class="cNav_Dl">
+                            <dt><img src="~/images/w6_3.png"></dt>
+                            <dd>
+                                <p>走势</p>
+                                <img src="~/images/w7.png">
+                                <div style="clear:both;"></div>
+                            </dd>
+                        </dl>
+                    </a>
+                </li>
+                <li>
+                    <a href="/Home/Plan">
+                        <dl class="cNav_Dl">
+                            <dt><img src="~/images/w6_4.png"></dt>
+                            <dd>
+                                <p>计划</p>
+                                <img src="~/images/w7.png">
+                                <div style="clear:both;"></div>
+                            </dd>
+                        </dl>
+                    </a>
+                </li>
+                <li>
+                    <a href="/Talking/Index">
+                        <dl class="cNav_Dl">
+                            <dt><img src="~/images/w6_5.png"></dt>
+                            <dd>
+                                <p>聊天</p>
+                                <img src="~/images/w7.png">
+                                <div style="clear:both;"></div>
+                            </dd>
+                        </dl>
+                    </a>
+                </li>
+            </ul>
+        </div>
     </div>
 
     @Html.Partial("Footer")
