--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/ExpertSearch.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/ExpertSearch.cshtml
@@ -212,6 +212,8 @@
 </head>
 <body style="background:#F4F4F5;">
     <header class="hjc_header">
+        <a href="javascript:history.go(-1);" class="hjc_back"></a>
+
         <div class="Search_Box">
             <a href="javascript:;" onclick="Search(@lType)" class="Search_Bqx f-r">查询</a>
             <div class="Search_BL">
